solved  the scroll on mobile for related

--- a/app/assets/stylesheets/components/_related.scss
+++ b/app/assets/stylesheets/components/_related.scss
@@ -16,3 +16,9 @@
 .related-content.image-upload {
   padding: 5% 10vw 0 10vw;
 }
+
+@media only screen and (max-device-width: 400px) {
+  .related-content {
+    padding: 5% 10vw 10% 20vw;
+  }
+}
